--- a/style2.css
+++ b/style2.css
@@ -253,21 +253,87 @@ box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  .wire7{
   width:120px;
  }
+ 
  .section-8{
-  
-  gap:30px;
+  border-radius: 40px 40px 40px 40px;
+  padding-bottom: 60px;
  }
  .sect{
   background-color: #E7332B;
+  border-radius: 40px 40px 40px 40px;
+
  }
  .sect h1{ font-size: 50px;
   padding-top: 20px;
+  padding-bottom: 30px;
  
+ }
+ .sect .break{
+  padding-bottom: 50px;
+ }
+ .section9d{
+  padding: 180px;
+  
+  border-radius: 40px 40px 40px;
  }
  .sect p{ font-size: 25px;
   font-weight: 500;
-  padding-top: 20px;
+  padding-top: 50px;
  }
+ .social-icons
+{
+  text-align:center
+}
+
+.social-icons
+{
+padding-left:0;
+margin-bottom:0;
+list-style:none
+}
+.social-icons li
+{
+display:inline-block;
+margin-bottom:4px
+}
+.social-icons li.title
+{
+margin-right:15px;
+text-transform:uppercase;
+color:#96a2b2;
+font-weight:700;
+font-size:13px
+}
+.social-icons a{
+background-color:#E7332B;
+color:#ffff;
+font-size:16px;
+display:inline-block;
+line-height:44px;
+width:44px;
+height:44px;
+text-align:center;
+margin-right:8px;
+border-radius:100%;
+-webkit-transition:all .2s linear;
+-o-transition:all .2s linear;
+transition:all .2s linear
+}
+.social-icons.size-sm a
+{
+line-height:34px;
+height:34px;
+width:34px;
+font-size:14px
+}
+.zuri img{
+  padding-bottom: 40px;
+}
+.privacy{
+  display: flex;
+  padding-top:30px ;
+  gap: 30px;
+}
 }
 @media screen and (min-width: 300px){
   .lady{ padding-top: 20px;
@@ -310,7 +376,8 @@ box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   position: relative;
   top:-20px;
 }
-      }
+
+}
 
   @media screen and (max-width: 900px){
     .logo{
@@ -514,6 +581,7 @@ align-items: center;
     width:200px;
 border-radius: 20px 20px 20px 20px;
 height: 40px;
+font-size:13px;
 background-color: #E7332B;
 color:white;
 box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -530,4 +598,76 @@ box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     padding-top: 9px;
     color: gray;
    }
+   .sect{
+    background-color: #E7332B;
+    border-radius: 40px 40px 40px 40px;
+  
+   }
+   .sect h1{ font-size: 30px;
+    padding-top: 20px;
+    padding-bottom: 30px;
+   
+   }
+   .sect .break{
+    padding-bottom: 50px;
+   }
+   .section9d{
+    padding: 80px;
+    
+    border-radius: 40px 40px 40px;
+   }
+   .sect p{ font-size: 25px;
+    font-weight: 500;
+    padding-top: 50px;
+   }
+   .social-icons
+{
+  text-align:center
+}
+
+.social-icons
+{
+padding-left:0;
+margin-bottom:0;
+list-style:none
+}
+.social-icons li
+{
+display:inline-block;
+margin-bottom:4px
+}
+.social-icons li.title
+{
+margin-right:15px;
+text-transform:uppercase;
+color:#96a2b2;
+font-weight:700;
+font-size:13px
+}
+.social-icons a{
+background-color:#E7332B;
+color:#ffff;
+font-size:16px;
+display:inline-block;
+line-height:44px;
+width:44px;
+height:44px;
+text-align:center;
+margin-right:8px;
+border-radius:100%;
+-webkit-transition:all .2s linear;
+-o-transition:all .2s linear;
+transition:all .2s linear
+}
+.social-icons.size-sm a
+{
+line-height:34px;
+height:30px;
+width:30px;
+font-size:14px
+}
+.zuri img{ width: 200px;
+  padding-bottom: 40px;
+}
+
   }
