--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ h5{
         justify-content: center;
         align-items: center;
         background-color: rgb(252, 242, 243);
-        background: url(../1st-images/hero-bg.svg);
+        background: url(./1st-images/hero-bg.svg);
     }
     
     .text{  padding-top: 50px;
@@ -171,7 +171,7 @@ h5{
         flex-direction: column;
         padding-top: 60px;
         padding-bottom: 160px;
-        row-gap: 20px;
+        column-gap: 20px;
         border: none;
     }
     .new{ color: white;
@@ -179,7 +179,6 @@ h5{
     height: 45px;
     width:230px;
     border: none;
-    padding-bottom: 20px;
     font-weight: 500;
     font-size: 17px;
 }
