--- a/style2.css
+++ b/style2.css
@@ -234,7 +234,7 @@ padding-top: 170px
 border-radius: 20px 20px 20px 20px;
 height: 40px;
 background-color: #E7332B;
-color:white;
+color:#ffff;
 box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   }
  /* faq*/
@@ -538,7 +538,8 @@ h5 a{
   width:150px;
 border-radius: 20px 20px 20px 20px;
 height: 40px;
-color: #E7332B;
+background-color: #E7332B;
+color;: white
 box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .subsection{
